# cachecontrol

./: .bumpversion.cfg  .bumpversion.cfg.license  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.rst  RELEASE.md  SECURITY.md  conftest.py  dev_requirements.txt  pavement.py  pyproject.toml  setup.cfg  setup.py  tasks.py  test_storage_sqlite_cache.py  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml  zizmor.yml
cachecontrol/: __init__.py  _cmd.py  adapter.py  cache.py  cmd.py  compat.py  controller.py  filewrapper.py  headers_parser.py  heuristics.py  patch_requests.py  policy.py  serialize.py  session.py  streaming_cache.py  wrapper.py
cachecontrol/caches/: __init__.py  db_cache.py  file_cache.py  redis_cache.py  sqlite_cache.py
cachecontrol/tests/: __init__.py  test_adapter.py  test_cache_control.py  test_cache_invalidation.py  test_max_age.py
docs/: Makefile  conf.py  custom_heuristics.rst  etags.rst  hacking.rst  index.rst  release_notes.rst  security.rst  storage.rst  tips.rst  usage.rst
examples/: benchmark.py  redis_cache.py
httpcache/: __init__.py  cache.py
httpcache/tests/: __init__.py  server.py  test_basic.py  test_cache_control.py  test_cache_invalidation.py
tests/: __init__.py  conftest.py  issue_263.py  test_adapter.py  test_cache_control.py  test_chunked_response.py  test_etag.py  test_expires_heuristics.py  test_headers_parser.py  test_max_age.py  test_pickle_patching.py  test_redirects.py  test_regressions.py  test_serialization.py  test_server_http_version.py  test_session.py  test_storage_filecache.py  test_storage_redis.py  test_stream.py  test_streaming_cache.py  test_vary.py  utils.py
