[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "cachecontrol"

[tool.flit.sdist]
include = ["tests/"]

[project]
name = "CacheControl"
dynamic = ["version"]
description = "httplib2 caching for requests"
readme = "README.rst"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Eric Larson", email = "ericlarson@ionrock.com" },
    { name = "Frost Ming", email = "me@frostming.com" },
    { name = "William Woodruff", email = "william@yossarian.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["requests", "http", "caching", "web"]
dependencies = ["requests >= 2.16.0", "msgpack >= 0.5.2, < 2.0.0"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://pypi.org/project/CacheControl/"
Issues = "https://github.com/psf/cachecontrol/issues"
Source = "https://github.com/psf/cachecontrol"

[project.optional-dependencies]
# End-user extras.
filecache = ["filelock >= 3.8.0"]
redis = ["redis>=2.10.5"]

# Development extras.
dev = [
    "CacheControl[filecache,redis]",
    "build",
    "mypy",
    "tox",
    "pytest-cov",
    "pytest",
    "cherrypy",
    "sphinx",
    "furo",
    "sphinx-copybutton",
    "black",
    "types-redis",
    "types-requests",
]

[project.scripts]
doesitcache = "cachecontrol._cmd:main"

[tool.mypy]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["bin", "lib", "include", "build"]
