[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["tests/"]
module-name = "cachecontrol"
module-root = ""


[project]
name = "CacheControl"
version = "0.14.4"
description = "httplib2 caching for requests"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Eric Larson", email = "ericlarson@ionrock.com" },
    { name = "Frost Ming", email = "me@frostming.com" },
    { name = "William Woodruff", email = "william@yossarian.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["requests", "http", "caching", "web"]
dependencies = ["requests >= 2.16.0", "msgpack >= 0.5.2, < 2.0.0"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://pypi.org/project/CacheControl/"
Issues = "https://github.com/psf/cachecontrol/issues"
Source = "https://github.com/psf/cachecontrol"

[project.optional-dependencies]
# End-user extras.
filecache = ["filelock >= 3.8.0"]
redis = ["redis>=2.10.5"]

# Development extras.
dev = [
    "CacheControl[filecache,redis]",
    "cherrypy",
    # See: https://github.com/cherrypy/cherrypy/issues/2070
    # See: https://github.com/cherrypy/cheroot/issues/769
    "cheroot >= 11.1.2",
    "codespell",
    "furo",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx-copybutton",
    "types-redis",
    "types-requests",
]

[project.scripts]
doesitcache = "cachecontrol._cmd:main"

[tool.mypy]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["bin", "lib", "include", "build"]
