# SPDX-FileCopyrightText: 2015 Eric Larson
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
license_files =
   LICENSE.txt

[tool:pytest]
norecursedirs = bin lib include build

[mypy]
show_error_codes = true
strict = true
enable_error_code = ignore-without-code,redundant-expr,truthy-bool

[mypy-msgpack]
ignore_missing_imports = true
